// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textAreaField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-5 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-9::-webkit-input-placeholder {
  color: #727683;
}

.emotion-9::-moz-placeholder {
  color: #727683;
}

.emotion-9:-ms-input-placeholder {
  color: #727683;
}

.emotion-9::placeholder {
  color: #727683;
}

.emotion-9[data-success='true'] {
  border-color: #22674e;
}

.emotion-9[data-error='true'] {
  border-color: #b3144d;
}

.emotion-9[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-9:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-9:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-9:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-9:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <label
          class="emotion-4 emotion-5 emotion-6"
          for="_r_0_"
        >
          Test
        </label>
        <div
          class="emotion-7 emotion-8"
        >
          <textarea
            aria-invalid="false"
            class="emotion-9 emotion-10"
            data-error="false"
            data-readonly="false"
            data-success="false"
            id="_r_0_"
            name="test"
            rows="3"
          />
          <div
            class="emotion-11 emotion-12"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textAreaField > should render correctly generated 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-7 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-9 {
  color: #b3144d;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 300px + 0px);
}

.emotion-13::-webkit-input-placeholder {
  color: #727683;
}

.emotion-13::-moz-placeholder {
  color: #727683;
}

.emotion-13:-ms-input-placeholder {
  color: #727683;
}

.emotion-13::placeholder {
  color: #727683;
}

.emotion-13[data-success='true'] {
  border-color: #22674e;
}

.emotion-13[data-error='true'] {
  border-color: #b3144d;
}

.emotion-13[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-13:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-13:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-13:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-13:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-13:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-13:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-13:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 1.5rem;
  padding: 0 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-17:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-17 .e1y1n78x0 {
  stroke: transparent;
}

.emotion-17:hover,
.emotion-17:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-19 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-19 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 3rem;
  padding: 0 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.emotion-21:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-21 .e1y1n78x0 {
  stroke: transparent;
}

.emotion-21:hover,
.emotion-21:active {
  background: #792dd4;
  color: #f9f9fa;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-3"
        >
          <label
            class="emotion-6 emotion-7 emotion-8"
            for="_r_7_"
          >
            Test
          </label>
          <span
            class="emotion-9 emotion-8"
          >
            *
          </span>
        </div>
        <div
          class="emotion-11 emotion-12"
        >
          <textarea
            aria-invalid="false"
            class="emotion-13 emotion-14"
            data-error="false"
            data-readonly="false"
            data-success="false"
            id="_r_7_"
            name="test"
            rows="3"
          >
            This is an example
          </textarea>
          <div
            class="emotion-15 emotion-16"
          >
            <button
              aria-label="clear value"
              class="emotion-17 emotion-18"
              type="button"
            >
              <svg
                class="emotion-19 emotion-20"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <button
        class="emotion-21 emotion-22"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textAreaField > should submit with onSubmitEnter prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-5 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-9::-webkit-input-placeholder {
  color: #727683;
}

.emotion-9::-moz-placeholder {
  color: #727683;
}

.emotion-9:-ms-input-placeholder {
  color: #727683;
}

.emotion-9::placeholder {
  color: #727683;
}

.emotion-9[data-success='true'] {
  border-color: #22674e;
}

.emotion-9[data-error='true'] {
  border-color: #b3144d;
}

.emotion-9[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-9:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-9:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-9:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-9:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 3rem;
  padding: 0 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.emotion-13:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-13 .e1y1n78x0 {
  stroke: transparent;
}

.emotion-13:hover,
.emotion-13:active {
  background: #792dd4;
  color: #f9f9fa;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <label
          class="emotion-4 emotion-5 emotion-6"
          for="_r_3_"
        >
          Test
        </label>
        <div
          class="emotion-7 emotion-8"
        >
          <textarea
            aria-invalid="false"
            class="emotion-9 emotion-10"
            data-error="false"
            data-readonly="false"
            data-success="false"
            id="_r_3_"
            name="test"
            rows="3"
          >
            This is an example
          </textarea>
          <div
            class="emotion-11 emotion-12"
          />
        </div>
      </div>
      <button
        class="emotion-13 emotion-14"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
